fix button z-index issue

--- a/css/main.css
+++ b/css/main.css
@@ -82,7 +82,7 @@ ul {
   position: absolute;
   left: 0;
   top: 25px;
-  z-index: 1;
+  z-index: 2;
 }
 
 #index .home-banner .pan-container {
